# hermes-desktop-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  WINDOWS-TESTING.md  package-lock.json  package.json
.github/workflows/: linux-smoke.yml  release.yml  test.yml
scripts/: bump_version.sh  extract_changelog.py  release.sh  sync_latest_json.py
src/: error.html  index.html  prefs.html  shell.html  splash.html  whatsnew.html
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: content.json  shell.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  conn.rs  health.rs  macos.rs  main.rs  menu.rs  paste.rs  prefs.rs  session.rs  state.rs  strip.rs  theme.rs  tunnel.rs  updater.rs  windows.rs
src/shared/: shell.css  shell.js
