[package]
name = "hermes-webui-desktop"
version = "0.1.0"
description = "Hermes WebUI Desktop — cross-platform shell for hermes-webui"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
ureq = "2"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
regex = "1"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSWindow",
    "NSWindowTabGroup",
    "NSGraphics",
    "NSResponder",
    "NSView",
] }
objc2-foundation = { version = "0.2", features = ["NSGeometry", "NSArray", "NSEnumerator"] }
libc = "0.2"

[profile.release]
strip = true
lto = true
