[package]
name = "hermes-webui-desktop"
version = "0.3.1"
description = "Hermes WebUI Desktop — cross-platform shell for hermes-webui"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable` = multi-webview (the Windows/Linux tab strip: one window hosting
# a strip webview + N content webviews). Retest the strip on tauri bumps.
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
ureq = "2"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
regex = "1"
url = "2"

[target.'cfg(unix)'.dependencies]
# tunnel.rs uses libc::kill for the SIGTERM→SIGKILL teardown on macOS AND Linux
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# main.rs calls XInitThreads before GTK init (invariant #11) — WebKitGTK's
# internal threads race Xlib otherwise (intermittent startup abort). dlopen
# wrapper, so Wayland-only systems without libX11 degrade gracefully.
x11-dl = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSWindow",
    "NSWindowTabGroup",
    "NSGraphics",
    "NSResponder",
    "NSView",
] }
objc2-foundation = { version = "0.2", features = ["NSGeometry", "NSArray", "NSEnumerator"] }

[profile.release]
strip = true
lto = true
